--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
-@import 'form';
-@import 'utils';
-@import 'fonts';
+@import './scss/form';
+@import './scss/utils';
+@import './scss/fonts';
+@import './scss/cards';
 
 :root {
     --dark: #1b1b1b;
@@ -110,4 +111,82 @@ body {
 .content {
     padding: 150px 20px 20px 20px;
     background-color: var(--dark);
+}
+
+.note-cards-area {
+
+    margin: 20px 10px 20px 10px;
+
+    .note-card {
+        @include card-default;
+    }
+    
+}
+
+.btn-menu {
+
+    @include btn-transparent-default;
+
+    border-radius: 100%;
+    padding: 4px 13px 4px 13px;
+
+    &::before {
+        font-family: "Font Awesome 5 Free"; 
+        font-weight: 900; 
+        content: "\f142";
+    }
+
+    &:focus {
+        border: 1px solid var(--blue-100);
+        box-shadow: 0 0 3px var(--blue-100);
+        background-color: hsla(222, 100%, 60%, 0.081);
+        color: var(--blue-100);
+        position: relative;
+    }
+
+}
+
+.btn-favorite {
+
+    font-size: 20px;
+    border: 1px solid transparent;
+    background-color: transparent;
+    color: var(--dark);
+    text-shadow: 0 0 4px var(--yellow);
+    margin-right: 5px;
+    outline: none;
+
+    &::before {
+        font-family: "Font Awesome 5 Free"; 
+        font-weight: 900; 
+        content: "\f005";
+    }
+
+    &:hover {
+        scale: 0.9;
+    }
+
+    &:focus {
+        text-shadow: 0 0 10px var(--yellow);
+    }
+}
+
+.btn-favorite--active {
+
+    font-size: 20px;
+    border: 1px solid transparent;
+    background-color: transparent;
+    color: var(--yellow);
+    margin-right: 5px;
+    outline: none;
+
+    &::before {
+        font-family: "Font Awesome 5 Free"; 
+        font-weight: 900; 
+        content: "\f005";
+    }
+
+    &:focus {
+        text-shadow: 0 0 10px var(--yellow);
+    }
 }
