--- a/style.css
+++ b/style.css
@@ -5,6 +5,139 @@
   width: 100%;
 }
 
+.btn-favorite {
+  font-size: 20px;
+  border: 1px solid transparent;
+  background-color: transparent;
+  color: var(--dark);
+  text-shadow: 0 0 4px var(--yellow);
+  margin-right: 3px;
+}
+.btn-favorite::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f005";
+}
+.btn-favorite:hover {
+  scale: 0.9;
+}
+
+.btn-favorite--active {
+  font-size: 20px;
+  border: 1px solid transparent;
+  background-color: transparent;
+  color: var(--yellow);
+  margin-right: 3px;
+  outline: none;
+}
+.btn-favorite--active::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f005";
+}
+
+.btn-menu {
+  border-radius: 100%;
+  padding: 4px 13px 4px 13px;
+  height: 30px;
+  width: 30px;
+  font-size: 0.85em;
+  margin: 0 3px 0 3px;
+  border: 1px solid var(--dark-300);
+  background-color: var(--dark);
+  color: var(--grey);
+}
+.btn-menu::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-menu:focus {
+  box-shadow: 0 0 3px transparent;
+  background-color: transparent;
+}
+.btn-menu::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f142";
+}
+
+.btn-menu--active {
+  border-radius: 100%;
+  padding: 4px 13px 4px 13px;
+  height: 30px;
+  width: 30px;
+  font-size: 0.85em;
+  margin: 0 3px 0 3px;
+  border: 1px solid var(--dark-300);
+  color: var(--grey);
+  box-shadow: 0 0 3px var(--dark-300);
+  background-color: var(--dark-100);
+}
+.btn-menu--active::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-menu--active::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f142";
+}
+
+.btn-edit {
+  border-radius: 100%;
+  padding: 4px 13px 4px 13px;
+  height: 30px;
+  width: 30px;
+  font-size: 0.85em;
+  margin: 0 3px 0 3px;
+  border: 1px solid var(--blue-100);
+  background-color: var(--dark);
+  color: var(--blue-100);
+}
+.btn-edit::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-edit:focus {
+  box-shadow: 0 0 3px var(--blue-100);
+  background-color: hsla(222deg, 100%, 60%, 0.176);
+}
+.btn-edit::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f303";
+}
+
+.btn-remove {
+  border-radius: 100%;
+  padding: 4px 13px 4px 13px;
+  height: 30px;
+  width: 30px;
+  font-size: 0.85em;
+  margin: 0 3px 0 3px;
+  border: 1px solid var(--red);
+  background-color: var(--dark);
+  color: var(--red);
+}
+.btn-remove::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-remove:focus {
+  box-shadow: 0 0 3px var(--red);
+  background-color: hsla(0deg, 78%, 45%, 0.168);
+}
+.btn-remove::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f2ed";
+  color: var(--red);
+}
+
 :root {
   --dark: #1b1b1b;
   --dark-100: #272727;
@@ -18,7 +151,8 @@
   --blue-100-transparent: hsla(222, 100%, 60%, 0.7);
   --blue-200: #457bfa;
   --red: #cb1919;
-  --yellow: #f9fc69;
+  --yellow-100: #f9fc69;
+  --yellow: #d3d638;
 }
 
 * {
@@ -78,7 +212,6 @@ body {
   box-shadow: 0 0 7px var(--blue-100-transparent);
 }
 .search-area button {
-  outline: none;
   border: 1px solid transparent;
   padding: 7px 11px 7px 11px;
   border-radius: 5px;
@@ -152,11 +285,6 @@ body {
   display: none;
 }
 
-.content {
-  padding: 150px 20px 20px 20px;
-  background-color: var(--dark);
-}
-
 .note-cards-area {
   margin: 20px 10px 20px 10px;
 }
@@ -167,86 +295,40 @@ body {
   font-family: "Poppins";
   display: flex;
   flex-direction: column;
+  position: relative;
+  margin: 10px 0 10px 0;
 }
 .note-cards-area .note-card .card-header {
   color: var(--light);
+  display: flex;
+  justify-content: space-between;
 }
 .note-cards-area .note-card .card-body {
-  color: var(--grey);
+  color: rgba(128, 128, 128, 0.914);
   font-size: 0.85em;
   padding-top: 5px;
 }
 .note-cards-area .note-card .card-footer {
   display: flex;
   justify-content: flex-end;
-}
-
-.btn-menu {
-  outline: none;
-  border: 1px solid var(--blue-100);
-  padding: 7px 11px 7px 11px;
-  border-radius: 5px;
-  background-color: transparent;
-  color: var(--blue-100);
-  font-family: "Poppins";
-  font-size: 0.9em;
-  font-weight: 700;
-  border-radius: 100%;
-  padding: 4px 13px 4px 13px;
-}
-.btn-menu:focus {
-  border: 1px solid var(--blue-100);
-  box-shadow: 0 0 7px var(--blue-100);
-  color: var(--blue-100);
+  display: flex;
   position: relative;
 }
-.btn-menu::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f142";
+.note-cards-area .menu-collapse {
+  visibility: hidden;
+  width: 0px;
+  padding: 1px;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  flex-direction: row;
 }
-.btn-menu:focus {
-  border: 1px solid var(--blue-100);
-  box-shadow: 0 0 3px var(--blue-100);
-  background-color: hsla(222deg, 100%, 60%, 0.081);
-  color: var(--blue-100);
-  position: relative;
-}
-
-.btn-favorite {
-  font-size: 20px;
-  border: 1px solid transparent;
-  background-color: transparent;
-  color: var(--dark);
-  text-shadow: 0 0 4px var(--yellow);
-  margin-right: 5px;
-  outline: none;
-}
-.btn-favorite::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f005";
-}
-.btn-favorite:hover {
-  scale: 0.9;
-}
-.btn-favorite:focus {
-  text-shadow: 0 0 10px var(--yellow);
+.note-cards-area .menu-collapse.show {
+  width: 75px;
+  visibility: visible;
 }
 
-.btn-favorite--active {
-  font-size: 20px;
-  border: 1px solid transparent;
-  background-color: transparent;
-  color: var(--yellow);
-  margin-right: 5px;
-  outline: none;
-}
-.btn-favorite--active::before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f005";
-}
-.btn-favorite--active:focus {
-  text-shadow: 0 0 10px var(--yellow);
+.content {
+  padding: 150px 20px 20px 20px;
+  background-color: var(--dark);
 }/*# sourceMappingURL=style.css.map */
