--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -105,7 +105,7 @@
     margin-right: 3px;
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f005";
     }
@@ -122,10 +122,9 @@
     background-color: transparent;
     color: var(--yellow);
     margin-right: 3px;
-    outline: none;
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f005";
     }
@@ -144,7 +143,7 @@
     }
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f142";
     }
@@ -159,7 +158,7 @@
     background-color:  var(--dark-100);
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f142";
     }
@@ -170,7 +169,7 @@
     @include btn-primary;
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f303";
     }
@@ -181,9 +180,74 @@
     @include btn-danger;
 
     &::before {
-        font-family: "Font Awesome 5 Free"; 
+        font-family: "Font Awesome 6 Free"; 
         font-weight: 900; 
         content: "\f2ed";
         color: var(--red);
+    }
+}
+
+.tree-area {
+
+    font-family: 'Poppins';
+    padding: 20px 10px 0 20px;
+    list-style: none;
+    overflow-y: scroll;
+    max-height: 70vh;
+
+    li {
+        font-size: 0.95em;
+        font-weight: 400;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        a {
+            color: var(--grey);
+            text-decoration: none;
+        }
+
+        & a::before {
+            font-family: "Font Awesome 6 Free"; 
+            content: '\f249';
+            margin-right: 5px;
+            font-weight: 1em;
+        }
+
+        &.tree-branch {
+            font-size: 1em;
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        &.tree-branch::before {
+            font-family: "Font Awesome 6 Free"; 
+            content: "\f07b";
+            color: var(--blue-100);
+            margin-right: 5px;
+            font-size: 1em;
+        }
+
+        &.tree-branch--active::before {
+            content: "\f07c";
+        }
+    }
+
+    ul.tree-collection {
+        list-style: none;
+        border-left: 2px solid var(--blue-100);
+        padding-left: 15px;
+        margin-left: 5px;
+        overflow: hidden;
+        transition: all .3s ease-in-out;
+        display: none;
+        visibility: hidden;
+    }
+
+    ul.tree-collection.show  {
+        display: block;
+        visibility: visible;      
     }
 }
