--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,8 @@
+@import './scss/variables';
 @import './scss/fonts';
 @import './scss/utils';
-@import './scss/controls';
 @import './scss/cards';
-
-:root {
-    --dark: #1b1b1b;
-    --dark-100: #272727;
-    --dark-200: #343434;
-    --dark-300: #484848;
-    --grey: #afafaf;
-    --light-100: #d4d4d4;
-    --light: #ffffff;
-    --blue: #1d4092;
-    --blue-100: #3471ff;
-    --blue-100-transparent: hsla(222, 100%, 60%, 0.7);
-    --blue-200: #457bfa;
-    --red: #cb1919;
-    --yellow-100: #f9fc69;
-    --yellow: #d3d638;
-}
+@import './scss/controls';
 
 * {
     margin: 0;
@@ -39,25 +23,16 @@ body {
     grid-template-areas:
         'sidebar_one content sidebar_two'
         'sidebar_one content sidebar_two';
-    height: 100vh;
-    width: 100vw;
-
-    .sidebar-one {
-        grid-area: sidebar_one; 
-    }
-    
-    .sidebar-two {
-        grid-area: sidebar_two;
-    }
-    
-    .content {
-        grid-area: content;
-    }
+    min-height: 100vh;
 }
 
 .sidebar {
     background-color: var(--dark-100);
-    padding: 30px 10px 30px 10px;
+}
+
+.sidebar-one {
+    grid-area: sidebar_one; 
+    // padding: 30px 10px 30px 10px;
 }
 
 .search-area {
@@ -66,6 +41,7 @@ body {
     flex-direction: row;
     width: 95%;
     margin: auto;
+    padding: 30px 10px 0 10px;
     
     input {
         @include input;
@@ -81,6 +57,7 @@ body {
 .filter-area {
 
     margin: 20px auto 0 auto;
+    padding: 0 10px 0 10px;
     width: 95%;
 
     .filter-header {
@@ -111,11 +88,23 @@ body {
 
 .note-cards-area {
 
-    margin: 20px 10px 20px 10px;
+    margin: 15px 0 0 0;
+    padding: 0px 20px 0px 20px;
+    overflow-y: scroll;
+    max-height: 70vh;
 
     .note-card {
         @include card;
         margin: 10px 0 10px 0;
+        cursor: pointer;
+    }
+
+    .note-card:hover{
+        box-shadow: 0 0 2px var(--blue-100);
+    }
+
+    .note-card::before:hover {
+        background-color: red;
     }
 
     .menu-collapse {
@@ -131,9 +120,37 @@ body {
         width: 75px;
         visibility: visible;
     }
+    
+}
+
+.sidebar-two {
+    grid-area: sidebar_two;
+    padding: 80px 0px 0px 0px;
+
+    .header {
+        h3 {
+            font-family: 'Poppins';
+            font-size: 1.1em;
+            font-weight: 500;
+            color: var(--dark-300);
+            margin: 8px;
+        }
+    }
 }
 
 .content {
-    padding: 150px 20px 20px 20px;
+    grid-area: content;
+    padding: 150px 20px 20px 50px;
     background-color: var(--dark);
+    font-family: 'Poppins';
+
+    h1 {
+        font-weight: 500;
+        font-size: 3.5em
+    }
+
+    p {
+        font-size: 0.95em;
+        max-width: 800px;
+    }
 }
