layout dos components padronizados

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -98,3 +98,5 @@ $icon-folder: '\f07b';
 $icon-folder-open: '\f07c';
 $icon-note: '\f249';
 $icon-clip: '\f0c6';
+$icon-search: '\f002';
+$icon-filter: '\f0b0';
