--- a/src/assets/scss/components/_tree.scss
+++ b/src/assets/scss/components/_tree.scss
@@ -32,11 +32,12 @@
         
         a {
             text-decoration: none;
-            color: map-get($light, 200);
+            color: map-get($light, 300);
     
-            &:hover {
-                text-decoration: underline;
-            }
+        &:hover, &:focus {
+                // text-decoration: underline;
+                color: map-get($light, 200);
+            }            
         }
     }
 
