--- a/src/assets/scss/utilities/_animations.scss
+++ b/src/assets/scss/utilities/_animations.scss
@@ -10,3 +10,14 @@
         }
     }
 }
+
+@mixin animationInput($color, $name) {
+    @keyframes focus-input-#{$name} {
+        from {
+            box-shadow: 0 0 0 0px rgba($color, 0.8);
+        } 
+        to {
+            box-shadow: 0 0 0 2px rgba($color, 0.8);
+        }
+    }
+}
