--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -175,3 +175,29 @@ body {
     }
 }
 
+
+.categories-area {
+    .categories-header {
+        @include font-body-1;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 80px 15px 20px 15px;
+        color: map-get($light, 100);
+
+        .line {
+            width: 100%;
+            height: 1px;
+            background-color: map-get($light, 100);
+        }
+
+        span {
+            margin-right: 7px;
+            white-space: nowrap;
+    
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
